test/parsing/errors/labelIneligibleStmt.chpl
label asdf writeln("not a loop");
